[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/title/title.gd" type="Script" id=1]
[ext_resource path="res://music/title.ogg" type="AudioStream" id=2]
[ext_resource path="res://sfx/select.ogg" type="AudioStream" id=3]
[ext_resource path="res://sprites/Ocean_Background_1.jpg" type="Texture" id=4]
[ext_resource path="res://resources/main.tres" type="Theme" id=5]
[ext_resource path="res://fonts/LilitaOne-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 1280.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 3 )
text = "Affirmation Fish: Anxiety Fishues"
align = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_left = 598.0
margin_top = 344.0
margin_right = 681.0
margin_bottom = 388.0
size_flags_horizontal = 4
text = "Start"

[node name="Select" type="AudioStreamPlayer" parent="VBoxContainer/Start"]
stream = ExtResource( 3 )

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_left = 584.0
margin_top = 392.0
margin_right = 696.0
margin_bottom = 436.0
size_flags_horizontal = 4
text = "Credits"

[node name="BG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="finished" from="VBoxContainer/Start/Select" to="." method="_on_Select_finished"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
